# football-analytics-portfolio

./: .gitignore  README.md  requirements.txt
football-event-analysis/Proyecto WhoScored/: .gitignore  README.md  Reporte_Post_Partido.ipynb  pyproject.toml  requirements.txt
football-event-analysis/Proyecto WhoScored/data/dictionaries/: players_master.csv  team_identity.csv
football-event-analysis/Proyecto WhoScored/data/processed/index/: ws_matches_laliga_2025-2026.csv
football-event-analysis/Proyecto WhoScored/data/raw/fbref/: jugadores_campo_2025_2026.csv  porteros_2025_2026.csv
football-event-analysis/Proyecto WhoScored/data/raw/fixtures/DataFixtures/laliga/2025-2026/: finished_matches.csv  finished_matches.json  round_overrides.csv
football-event-analysis/Proyecto WhoScored/data_sample/: events_defensive_sample.csv  events_passes_sample.csv  events_sample.csv  events_shots_sample.csv  formations_timeline_sample.csv  match_meta_sample.csv  players_sample.csv
football-event-analysis/Proyecto WhoScored/notebooks/: 00_identidad.ipynb  01_descarga_fixtures.ipynb  02_descarga_matchcenter.ipynb  03_ws_index_min.ipynb  04_visualizaciones_whoscored.ipynb  05_visualizaciones_fbref.ipynb  test_debugs.ipynb
football-event-analysis/Proyecto WhoScored/src/fbref_viz/: fbref_scraper.py
football-event-analysis/Proyecto WhoScored/src/whoscored_viz/: dictionaries.py  identity.py  paths.py  utils_io.py  whoscored_fixtures.py  whoscored_matchcenter.py
player-similarity-model/: .gitignore  README.md  requirements.txt
scouting-crm-case-study/: README.md  architecture.md  (+1 more)
(+70 files in other folders)
